--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -56,8 +56,8 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
+      <x>200</x>
+      <y>10</y>
       <width>181</width>
       <height>61</height>
      </rect>
@@ -83,7 +83,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>150</y>
+      <y>80</y>
       <width>431</width>
       <height>181</height>
      </rect>
@@ -193,7 +193,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>340</y>
+      <y>270</y>
       <width>211</width>
       <height>151</height>
      </rect>
@@ -219,7 +219,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>340</y>
+      <y>270</y>
       <width>211</width>
       <height>151</height>
      </rect>
@@ -244,29 +244,40 @@
    <widget class="QGroupBox" name="groupBox_6">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>10</y>
-      <width>241</width>
-      <height>141</height>
+      <x>10</x>
+      <y>430</y>
+      <width>431</width>
+      <height>241</height>
      </rect>
     </property>
     <property name="title">
-     <string>GroupBox</string>
+     <string>Mapa segun pecados</string>
     </property>
-    <widget class="QGraphicsView" name="graphicsView">
+    <widget class="QLabel" name="lblMapa">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>221</width>
-       <height>111</height>
+       <width>411</width>
+       <height>211</height>
       </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="resources.qrc">:/mapa2.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
