+Se agrega libreria para envio de correos. +Listo el infierno, hay que agregar lo de correos, eso si. +Condena pais +Borrar persona de ListaPersona

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,8 +19,8 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>181</width>
-      <height>61</height>
+      <width>211</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="title">
@@ -56,10 +56,10 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>230</x>
       <y>10</y>
-      <width>181</width>
-      <height>61</height>
+      <width>211</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="title">
@@ -70,7 +70,7 @@
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>161</width>
+       <width>191</width>
        <height>23</height>
       </rect>
      </property>
@@ -78,12 +78,35 @@
       <string>Make them sin</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="btnCondenarPais">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>50</y>
+       <width>81</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Condenar Pais</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtPaisACondenar">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>101</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>110</y>
       <width>431</width>
       <height>181</height>
      </rect>
@@ -193,7 +216,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>270</y>
+      <y>300</y>
       <width>211</width>
       <height>151</height>
      </rect>
@@ -219,7 +242,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>270</y>
+      <y>300</y>
       <width>211</width>
       <height>151</height>
      </rect>
@@ -245,9 +268,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>430</y>
+      <y>450</y>
       <width>431</width>
-      <height>241</height>
+      <height>221</height>
      </rect>
     </property>
     <property name="title">
@@ -259,7 +282,7 @@
        <x>10</x>
        <y>20</y>
        <width>411</width>
-       <height>211</height>
+       <height>191</height>
       </rect>
      </property>
      <property name="text">
