--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -289,18 +289,98 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="resources.qrc">:/mapa2.png</pixmap>
+      <pixmap>:/mapa2.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
      </property>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="groupBox_7">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>10</y>
+      <width>431</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Personas en el infierno</string>
+    </property>
+    <widget class="QTableWidget" name="tblPersonasEnInfierno">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>411</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nombre</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Apellido</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Pais</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Creencia</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Profesion</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Correo</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nacimiento</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Pecados</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Hijos</string>
+      </property>
+     </column>
+    </widget>
+   </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
