--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -289,7 +289,7 @@
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap>:/mapa2.png</pixmap>
+      <pixmap resource="resources.qrc">:/mapa2.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
@@ -378,9 +378,57 @@
      </column>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="groupBox_8">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>170</y>
+      <width>361</width>
+      <height>56</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Configuración de Salvación</string>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="btnPlay">
+       <property name="text">
+        <string>Play</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btnPausa">
+       <property name="text">
+        <string>Pausa</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSpinBox" name="secSalvacion"/>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Persona salvada:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="id_salvado">
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
