--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -162,6 +162,9 @@
      <property name="alternatingRowColors">
       <bool>true</bool>
      </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
      <attribute name="horizontalHeaderStretchLastSection">
       <bool>true</bool>
      </attribute>
@@ -302,7 +305,7 @@
       <x>450</x>
       <y>10</y>
       <width>431</width>
-      <height>151</height>
+      <height>141</height>
      </rect>
     </property>
     <property name="title">
@@ -314,7 +317,7 @@
        <x>10</x>
        <y>20</y>
        <width>411</width>
-       <height>121</height>
+       <height>111</height>
       </rect>
      </property>
      <property name="alternatingRowColors">
@@ -381,8 +384,8 @@
    <widget class="QGroupBox" name="groupBox_8">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>170</y>
+      <x>450</x>
+      <y>290</y>
       <width>361</width>
       <height>56</height>
      </rect>
@@ -406,7 +409,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QSpinBox" name="secSalvacion"/>
+      <widget class="QSpinBox" name="secSalvacion">
+       <property name="minimum">
+        <number>1</number>
+       </property>
+       <property name="value">
+        <number>5</number>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QLabel" name="label_2">
@@ -423,6 +433,260 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_9">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>350</y>
+      <width>231</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Personas en el arbol de la vida y no nacidos</string>
+    </property>
+    <widget class="QListWidget" name="lstPersonasNoNacidas">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>211</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="movement">
+      <enum>QListView::Snap</enum>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_10">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>510</y>
+      <width>431</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Ubicacion por pais y apellido</string>
+    </property>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Apellido</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtConsultaApellido">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>20</y>
+       <width>113</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btnConsultaPaisApellido">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>150</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Buscar</string>
+     </property>
+    </widget>
+    <widget class="QTableWidget" name="tblConsulta">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>411</width>
+       <height>91</height>
+      </rect>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nombre</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Apellido</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Pais</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Creencia</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Profesion</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Correo</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nacimiento</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Pecados</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Hijos</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Ubicacion</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>20</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pais</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="txtConsultaPais">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>20</y>
+       <width>113</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_11">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>150</y>
+      <width>431</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Personas en el paraiso</string>
+    </property>
+    <widget class="QTableWidget" name="tblPersonasEnParaiso">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>411</width>
+       <height>111</height>
+      </rect>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nombre</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Apellido</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Pais</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Creencia</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Profesion</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Correo</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nacimiento</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Pecados</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Hijos</string>
+      </property>
+     </column>
+    </widget>
    </widget>
   </widget>
  </widget>
