--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1091</width>
-    <height>679</height>
+    <width>1320</width>
+    <height>692</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -686,6 +686,198 @@
        <string>Cant. Hijos</string>
       </property>
      </column>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_12">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>10</y>
+      <width>401</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Relación porcentual</string>
+    </property>
+    <widget class="QComboBox" name="cmbCriterio">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>69</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>Apellido</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Continente</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Pais</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Creencia</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Profesion</string>
+      </property>
+     </item>
+    </widget>
+    <widget class="QLineEdit" name="txtCriterio">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>20</y>
+       <width>101</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QTableWidget" name="tblPecadoresOrdenados">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>381</width>
+       <height>111</height>
+      </rect>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <property name="sortingEnabled">
+      <bool>true</bool>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nombre</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Apellido</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Pais</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Creencia</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Profesion</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Correo</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Nacimiento</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Pecados</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Cant. Hijos</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QPushButton" name="btnConsultar">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>20</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Consultar</string>
+     </property>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>60</y>
+       <width>123</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Poblacion: </string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblPrcntPoblacion">
+        <property name="text">
+         <string>Poblacion% :</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>60</y>
+       <width>109</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Pecados :</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="lblPrcntPecados">
+        <property name="text">
+         <string>Pecados&amp; :</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
